<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:drawableBottom="@drawable/editar"
            android:fontFamily="@font/dancing_love"
            android:textColor="@color/black"
            android:textSize="25dp"/>
    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewNombre"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_apellido"
        />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewApellido"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:labelFor="@+id/viewTelefono"
        android:textSize="20sp"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableTop="@drawable/ic__calendar_24"
        android:hint="@string/hint_fecha"
        android:layout_marginVertical="14dp"
        android:gravity="center"
        android:inputType="date"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/txtHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_hora"
        android:inputType="time"
        android:gravity="center"
        android:textSize="20dp"
        android:drawableTop="@drawable/ic_time"
        />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Guarda"
        />
    </LinearLayout>

</RelativeLayout>